--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,28 @@
+
+.container{
+	margin-top: 30px;
+}
 .top-gap {
 	margin-top: 50px;
 }
 .form-shape {
   margin-top: 40px;
+}
+.form-container{
+	max-width: 600px;
+	margin: 30px auto 100px auto;
+}
+form{
+	margin-bottom: 25px;
+}
+.form-control{
+	height: 42px;
+}
+.btn{
+	width: 95%;
+	margin-left: 15px;
+}
+.btn,
+.alert-danger{
+	padding: 10px 12px;
 }
